--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <p>
             This Marchenko-Pastur Distribution shown in red fits decently to our histogram and this tells us enough about which eigenvalues are noise and signals. First off we can 
             conclude that the eigen-outliers are 2.82904448, 2.93798858, 3.53668428, 8.43312561, 9.27615181,  118.320105 as they are outside the upper bound of the distribution and they have the 
-            greatest magnitude, meaning that these eigenvalues are our Prinicipal Components. On top of that they account for 77.37% of variance in the dataset. And from this distribution we can 
+            greatest magnitude, meaning that these eigenvalues are our Prinicipal Components. On top of that they account for 77.37% of the explained variance in the dataset. And from this distribution we can 
             conclude that anything under the distribution tells us that these eigenvalues are noise and contribute no signal to the actual data. The eigenvalues below the lower bound of the 
             Marcenko Distribution can be principal components, however, because these values are very small, meaning that they have a weak signal-to-noise ratio, as there could be information 
             associated with these eigenvalues about the data; it is a small contribution to the overall variance/infomration to the dataset. And not including these eigenvalues would not 
