--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
         <div>
             <p>
                 The application of Principal Component Analysis (PCA) significantly reduced the dimensionality of the original 563 features in the Human Activity Recognition Using Smartphones 
-                dataset. Resulting in only three principal components with eigenvalues of [2.82, 2.93, 3.53, 8.433, 9.27,  118.32]. These eigenvalues stand out from the noise in the dataset. This reduction highlights 
+                dataset. Resulting in only six principal components with eigenvalues of [2.82, 2.93, 3.53, 8.433, 9.27,  118.32]. These eigenvalues stand out from the noise in the dataset. This reduction highlights 
                 the dataset's intrinsic patterns by capturing the majority of the variance with fewer dimensions, thus enhancing analytical efficiency without significant loss of information. 
                 These principal components, which primarily encapsulate variations in gravity-affected movements, rotational motion, and the complexity of jerk movements among different 
                 activities, allows for a condensed understanding of human activity patterns. The dimension-reduced data can be applied to other machine learning models as it improves model training 
