--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 
 
             
-        <div class='PC_Plots' >
+        <div class='PC_Plots' style="overflow: hidden; text-align: center;" >
             <iframe src="PC_Plots.html" style="width: 100%; height: 700px; border: none;"></iframe>
         </div>
 
